js262/test/language/expressions/assignmenttargettype/direct-primaryexpression-functionexpression.js


/*---
description: PrimaryExpression FunctionExpression, Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

function() {} = 1;
